<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Snowball</string>
    <string name="activity_intro_title">Snowball</string>
    <string name="intro_image_content_description">Snowball</string>
    <string name="action_intro_load">Load game</string>
    <string name="action_intro_about">About</string>
    <string name="action_intro_manual">Manual</string>
	<string name="activity_load_game_title">Choose game</string>
    <string name="activity_game_title">Snowball</string>
    <string name="view_game_image_content_description">Location image</string>
    <string name="action_game_save">Save game</string>
    <string name="action_game_load">Load game</string>
    <string name="dialog_load_game">Load game</string>
    <string name="dialog_load">Load</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="button_look_content_description">Look</string>
    <string name="button_examine_content_description">Examine</string>
    <string name="button_get_content_description">Get</string>
    <string name="button_drop_content_description">Drop</string>
    <string name="button_open_content_description">Open</string>
    <string name="button_close_content_description">Close</string>
    <string name="button_inventory_content_description">Inventory</string>
    <string name="button_press_content_description">Press</string>
    <string name="button_read_content_description">Read</string>
    <string name="button_wait_content_description">Wait</string>
    <string name="button_enter_content_description">Enter</string>
    <string name="button_clear_input_content_description">Clear input</string>
    <string name="button_expand_collapse_content_description">Expand/collapse</string>
    <string name="what_now">What now?</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_manual">Manual</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>